Fixed horizontal scroll, tweaks to summary form

--- a/assets/src/scss/components/_infosection.scss
+++ b/assets/src/scss/components/_infosection.scss
@@ -4,6 +4,7 @@
 
     width: 100vw;
     min-width: 400px;
+    max-width: 100%;
 
     background-color: $section-bg-light;
 
